

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

25-May-2010 Christophe Demko
 # Fixed autodetect ftp path in installation
 # Fixed css for hathor and bluestork template (missing image http://joomlacode.org/gf/project/joomla/tracker/?action=TrackerItemEdit&tracker_item_id=20632)
 # Fixed UI in language manager

25-May-2010 Jean-Marie Simonet
# [#20608] Double Pathway / Breadcrumb

25-May-2010 Andrew Eddie
 # Fixed issue [#20601] User Manager - parent field does not display when creating a new group.
 # Fixed issue [#20526] Database creation error with MySQL5 (Adam Banks).
 # Fixed issue [#20549] White page on installation when the PHP session save path is unwritable (Nicholas Dionysopoulos).
 # Fixed issue [#20519] 'Type' table option was deprecated in MySQL 4.0 and removed in MySQL 5.5 (CY Lee).
 # Fixed issue [#20613] Missing parse_ini_file, parse_ini-string, json_encode or json_decode cause show-stopper behaviour (Nicholas Dionysopoulos).
 # Partially fixed issue [#13281] Cancel Button on Weblink Submit Form Doesn't Return to Referer Page (Christopher Garvis, Chris Taylor)
 # Fixed issue [#20226] Recursion in some circumstances when reinstalling (Elin Waring, Christophe Demko).
 # Fixed issue [#20516] [patch] Hathor fixes (Andy Tarr, Airton Torres).
 # Fixed issue [#20621] [patch] JText fix to Hathor (Andy Tarr).
 # Fixed issue [#20622] [patch] Fixes to Hathor to prevent buttons wrapping on small screen (Andy Tarr).
 # Fixed issue [#20302] com_config application view loads a duplicate of switcher javascript (Phil Snell).
 # Fixed issue [#20619] Global configuration allows you to save an invalid email (Elin Waring).
 
24-May-2010 Jean-Marie Simonet