@@ -12,6 +12,7 @@ COM_REDIRECT_DISABLE_LINK="Disable Link"
 COM_REDIRECT_EDIT_LINK="Edit Link #%d"
 COM_REDIRECT_ENABLE_LINK="Enable Link"
 COM_REDIRECT_ERROR_DESTINATION_URL_REQUIRED="The redirect must have a destination URL"
+COM_REDIRECT_ERROR_DUPLICATE_OLD_URL="The source URL must be unique."
 COM_REDIRECT_ERROR_DUPLICATE_URLS="The source and destination URLs cannot be the same."
 COM_REDIRECT_ERROR_SOURCE_URL_REQUIRED="The redirect must have a source URL"
 COM_REDIRECT_FIELD_COMMENT_DESC="Sometimes it is helpful to describe the URLs for redirect management later on."
